--- a/login.html
+++ b/login.html
@@ -15,10 +15,11 @@
     </div>
     <h1>Welcome Back</h1>
     <p>Log in to your Mentimeter account</p>
-         
+         <div id="btn">
+          <button id="facb" class="btn">Sign up with facebook</button>
+          <button class="btn">Sign up with Google</button>
+         </div>
   <form action="">
-    <button id="facb" class="btn">Sign up with facebook</button>
-    <button class="btn">Sign up with Google</button>
     <p>or using email</p>
     <label>Your email address</label>
     <input id="email" type="email" placeholder="brienne@tarth.com">
