--- a/signup.html
+++ b/signup.html
@@ -14,10 +14,12 @@
         <h2>Mentimeter</h2>    
     </div>
     <h1>Create a free account</h1>
-   
-  <form action="">
+    <div id="btn">
     <button id="facb" class="btn">Sign up with facebook</button>
-    <button class="btn">Sign up with Google</button>  
+    <button class="btn">Sign up with Google</button> 
+</div> 
+  <form action="">
+   
     <p>or using email</p>
     <label>First and last name</label>
     <input id="name" type="text" placeholder="Brienne of Tarth">
